# NeroPos

./: .gitignore  .taurignore  README.md  package.json  vite.config.ts
.github/workflows/: release.yml
public/: splashscreen.html
src/: App.tsx  main.scss  main.tsx
src-tauri/: 2  2.0.0-rc  Cargo.toml  app.db  app.db-shm  app.db-wal  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/model/: Entity.rs
src-tauri/src/service/: db.rs
src-tauri/src/utils/: constants.rs
src/pages/auth/: LoadEntity.tsx  Login.tsx  auth.scss
src/pages/home/: Home.tsx  home.scss
src/pages/home/components/: HomeWindow.tsx  NavBar.tsx  SideBar.tsx
src/pages/home/stock/: Stock.tsx
src/pages/home/till/: Till.tsx  componets.tsx  till.scss
src/redux/: store.ts
src/redux/reducers/: entityReducer.ts  receiptReducer.ts  settingsReducer.ts  staffReducer.ts
src/utils/: Loader.tsx  constants.ts  functions.ts
