[package]
name = "tuto"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1",features = [  ] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json =  "1.0.133"
rand = "0.8.5"
reqwest = { version = "*",features = ["json"] }
tokio = { version = "*", features = ["full"] }
sqlx= {version = "0.5.9",features = ["runtime-async-std-native-tls", "sqlite", "macros"] }
async-std= {version = "1.6",features = ["attributes"] }
futures="0.3.18"
chrono = "0.4"
lazy_static = "1.4"
tauri-plugin-notification = "2.0.1"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0-rc"

